@@ -26,6 +26,7 @@
 ## Technical
 ##
 
+- Autodetect: Limit the number of errors per hash-mode try to 100 to avoid long startup time
 - LM: Workaround JiT compiler bug in -m 3000 on NV leading to false negatives with large amount of hashes
 - Tests: Changed tests for VeraCrypt from -a 0 to -a 3, because password extension is not available to all shells
 
